@@ -4,6 +4,9 @@ Invalid write of size 1
  Address 0x........ is 5 bytes inside a block of size 10 free'd
    at 0x........: free (vg_replace_malloc.c:...)
    by 0x........: main (noisy_child.c:24)
+ Block was alloc'd at
+   at 0x........: malloc (vg_replace_malloc.c:...)
+   by 0x........: main (noisy_child.c:23)
 
 Invalid write of size 1
    at 0x........: do_parent_badness (noisy_child.c:16)
@@ -11,6 +14,9 @@ Invalid write of size 1
  Address 0x........ is 0 bytes after a block of size 10 free'd
    at 0x........: free (vg_replace_malloc.c:...)
    by 0x........: main (noisy_child.c:24)
+ Block was alloc'd at
+   at 0x........: malloc (vg_replace_malloc.c:...)
+   by 0x........: main (noisy_child.c:23)
 
 
 HEAP SUMMARY:
